# dg1

./: .bazelrc  README.md  WORKSPACE.bazel  package.json  tsconfig.json
examples/go/: BUILD.bazel  main.go
examples/go/sayhello/: BUILD.bazel  main.go
examples/java/: BUILD.bazel  JavaServer.java
examples/nodejs/: BUILD.bazel  main.ts  package.json  tsconfig.json
examples/nodejs/say-hello/: BUILD.bazel  app.application.ts  app.module.ts  main.ts  tsconfig.json
examples/protobuf/: BUILD.bazel  hello.proto
