workspace(
    name = "dg1",
    # managed_directories = {"@npm": ["node_modules"]}
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# support golang
http_archive(
    name = "io_bazel_rules_go",
    sha256 = "7904dbecbaffd068651916dce77ff3437679f9d20e1a7956bff43826e7645fcc",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.25.1/rules_go-v0.25.1.tar.gz",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.25.1/rules_go-v0.25.1.tar.gz",
    ],
)
load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
go_rules_dependencies()
go_register_toolchains(version = "1.18.2")

# support proto
http_archive(
    name = "rules_proto",
    sha256 = "e017528fd1c91c5a33f15493e3a398181a9e821a804eb7ff5acdd1d2d6c2b18d",
    strip_prefix = "rules_proto-4.0.0-3.20.0",
    urls = [
        "https://github.com/bazelbuild/rules_proto/archive/refs/tags/4.0.0-3.20.0.tar.gz",
    ],
)
load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()

# support nodejs
http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "0fad45a9bda7dc1990c47b002fd64f55041ea751fafc00cd34efb96107675778",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.5.0/rules_nodejs-5.5.0.tar.gz"],
)

load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")
build_bazel_rules_nodejs_dependencies()

load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories", "yarn_install")
node_repositories(
  node_version = "18.3.0",
#   yarn_version = "1.22.19",
  node_repositories = {
    "18.3.0-darwin_amd64": ("node-v18.3.0-darwin-x64.tar.gz", "node-v18.3.0-darwin-x64", "e4d4b81d08adbf34c40d46d4143ec1fab92372b459b466e9e6ec9a228a93badd"),
    "18.3.0-linux_amd64": ("node-v18.3.0-linux-x64.tar.xz", "node-v18.3.0-linux-x64", "e374f0e7726fd36e33846f186c3d17e41f7d62758e9af72c379b6583e73ffd48"),
    "18.3.0-windows_amd64": ("node-v18.3.0-win-x64.zip", "node-v18.3.0-win-x64", "7c38bf820817deeafd9242ad56b30edecb02d694177c7811a89c71d3bdb1c64d"),
  },
#   yarn_repositories = {
#     "1.5.1": ("yarn-v1.5.1.tar.gz", "yarn-v1.5.1", "cd31657232cf48d57fdbff55f38bfa058d2fb4950450bd34af72dac796af4de1"),
#     "1.22.19": ("yarn-v1.22.19.tar.gz", "yarn-v1.22.19", "732620bac8b1690d507274f025f3c6cfdc3627a84d9642e38a07452cc00e0f2e"),
#   },
  node_urls = ["https://nodejs.org/dist/v{version}/{filename}"],
#   yarn_urls = ["https://github.com/yarnpkg/yarn/releases/download/v{version}/{filename}"],
)
yarn_install(
    name = "npm",
    exports_directories_only = False,
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
)
