load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")


ts_project(
    name = "main",
    declaration = True,
    srcs = glob(
        ["*.ts"],
        exclude = ["*.test.ts"]
    ),
    tsconfig = "tsconfig.json",
)

nodejs_binary(
    name = "main_bin",
    data = [
        ":main"
    ],
    entry_point = ":main.ts"
)
