package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
go_proto_library(
    name = "hello_go_proto",
    proto = ":hello_proto",
    importpath = "hello"
)

java_proto_library(
    name = "hello_java_proto",
    deps = [":hello_proto"],
)

load("@npm//protoc-gen-ts:index.bzl", "ts_proto_library")
ts_proto_library(
    name = "hello_ts_proto",
    deps = [
        ":hello_proto"
    ],
    visibility = ["//visibility:public"],
)